[package]
name = "headroom"
version = "1.7.2"
edition = "2021"
authors = ["Masanari Higashi"]
description = "Audio loudness analyzer and gain adjustment tool for mastering workflows"
license = "MIT"
repository = "https://github.com/M-Igashi/headroom"
keywords = ["audio", "loudness", "lufs", "mastering", "ffmpeg"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
# CLI interaction
dialoguer = "0.12"
console = "0.16"
indicatif = "0.18"

# Data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Parallel processing
rayon = "1.10"

# File system
walkdir = "2.4"
chrono = "0.4"
shellexpand = "3.1"

# MP3/AAC lossless gain adjustment
mp3rgain = { version = "2.0", default-features = false, features = ["aac"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
